--- a/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 0 - Export data without amount for review\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -27,9 +34,124 @@
         "\n",
         "write_path = (\n",
         "    Path.home()\n",
-        "    / \"Nextcloud/TSOSI_data/doab/2025-02-11_DOAB_Library_suppory_no_amount.xlsx\"\n",
+        "    / \"Nextcloud/TSOSI_data/doab/2025-02-11_DOAB_Library_suppory_no_amount_new.xlsx\"\n",
         ")\n",
         "df[mask].to_excel(write_path, index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 0.BIS - Combine initial data and reviewed missing amounts\n",
+        "\n",
+        "No. The reviewed missing amounts are to be proccesed as standalone supports, see below.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "\n",
+        "folder = Path.home() / \"Nextcloud/TSOSI_data/doab/0_raw\"\n",
+        "raw_file = \"2025-02-11-DOAB_Library_Report.xlsx\"\n",
+        "reviewed_file = \"2025-02-11_DOAB_Library_support_no_amount_reviewed.xlsx\"\n",
+        "output_file = \"2025-05-09_DOAB_Library_Report_clean.xlsx\"\n",
+        "\n",
+        "amount_columns = [\n",
+        "    \"Annual amount (USD)\",\n",
+        "    \"Annual amount (GBP)\",\n",
+        "    \"Annual amount (EUR)\",\n",
+        "]\n",
+        "date_cols = [\"Support start date\", \"Support end date\"]\n",
+        "# Agent and Supporter type have also been modified so we can't use them\n",
+        "mapping_cols = [\n",
+        "    \"Status\",\n",
+        "    \"Company\",\n",
+        "    \"Country\",\n",
+        "    \"Invoice preference\",\n",
+        "    \"Support start date\",\n",
+        "    \"Support end date\",\n",
+        "    \"Commitment period (years)\",\n",
+        "]\n",
+        "raw_data = pd.read_excel(str(folder / raw_file))\n",
+        "reviewed_data = pd.read_excel(str(folder / reviewed_file))\n",
+        "\n",
+        "# Filter out rows without amounts\n",
+        "mask = None\n",
+        "for c in amount_columns:\n",
+        "    mask_part = ~reviewed_data[c].isna()\n",
+        "    mask = mask_part if mask is None else mask | mask_part\n",
+        "reviewed_data = reviewed_data[mask].copy()\n",
+        "\n",
+        "# Filter out rows without start or end date\n",
+        "for c in date_cols:\n",
+        "    raw_data = raw_data[~raw_data[c].isna()].copy()\n",
+        "    reviewed_data = reviewed_data[~reviewed_data[c].isna()].copy()\n",
+        "    raw_data[c] = pd.to_datetime(raw_data[c], format=\"%d/%m/%Y\")\n",
+        "    reviewed_data[c] = pd.to_datetime(reviewed_data[c], format=\"%m/%d/%Y\")\n",
+        "\n",
+        "for c in reviewed_data.columns:\n",
+        "    if c in mapping_cols:\n",
+        "        continue\n",
+        "    reviewed_data[f\"_corrected_{c}\"] = reviewed_data[c]\n",
+        "    del reviewed_data[c]\n",
+        "\n",
+        "reviewed_data[\"_corrected\"] = 1\n",
+        "\n",
+        "corrected = raw_data.merge(reviewed_data, on=mapping_cols, how=\"left\")\n",
+        "\n",
+        "print(\n",
+        "    f\"\"\"\n",
+        "Rows with merge: {len(corrected[corrected[\"_corrected\"] == 1])}\n",
+        "Reviewed transfers (initial): {len(reviewed_data)}\n",
+        "\"\"\"\n",
+        ")\n",
+        "to_update_mask = corrected[\"_corrected\"] == 1\n",
+        "assert len(corrected[to_update_mask]) == len(reviewed_data)\n",
+        "assert len(corrected) == len(raw_data)\n",
+        "\n",
+        "for c in amount_columns:\n",
+        "    corrected.loc[to_update_mask, c] = corrected[to_update_mask][\n",
+        "        f\"_corrected_{c}\"\n",
+        "    ]\n",
+        "other_cols = [\"Agent\", \"Supporter type\"]\n",
+        "for c in other_cols:\n",
+        "    corrected.loc[to_update_mask, c] = corrected[to_update_mask][\n",
+        "        f\"_corrected_{c}\"\n",
+        "    ]\n",
+        "\n",
+        "to_delete_cols = []\n",
+        "for c in corrected.columns:\n",
+        "    if not c.startswith(\"_corrected\"):\n",
+        "        continue\n",
+        "    to_delete_cols.append(c)\n",
+        "\n",
+        "corrected.drop(columns=to_delete_cols, inplace=True)\n",
+        "for c in date_cols:\n",
+        "    corrected[c] = corrected[c].dt.date\n",
+        "corrected.to_excel(\n",
+        "    str(folder / output_file), sheet_name=\"Transfers\", index=False\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# TODO\n",
+        "\n",
+        "Handle the reviewed data independently. It has a different structure than the initial one.\n",
+        "\n",
+        "Each row corresponds to an actual support so the following needs to be done:\n",
+        "\n",
+        "- Upfront - Just compute the total amount with Years \\* Annual amount\n",
+        "- One year commitment - Standard processing (just check the dates)\n",
+        "- Annual - Standard processing (it already takes care of splitting it correctly)\n"
       ]
     },
     {
@@ -47,9 +169,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Discarded 22 rows without amount out of 1183 rows.\n",
+            "The following entities have 'One year commitment' with commitment period > 1 year\n",
+            "['American University', 'Hochschule für angewandte Wissenschaft und Kunst, Fachhochschule Hildesheim/Holzminden/Göttingen-Bib', 'Hochschule Osnabrück / Bibliothek', 'Library of the Deutsches Museum']\n",
+            "\n",
+            "WARNING - The following Entities have Annual transfers spanning more than 1 year and inconsistent commitment period:\n",
+            "['Umeå University', 'University of Massachusetts, Amherst']\n",
+            "\n",
+            "Splitted 77 annual transfers.\n",
+            "ERROR - There are some inconsistent data within the Upfront transfers\n",
+            "Check the following entities:\n",
+            "['CON: Det Kgl. Bibliothek', 'SUNY System', 'TU Darmstadt, Universitäts - und Landesbibliothek', 'University of Birmingham', 'University of California, Riverside', 'University of Guelph', 'University of Lancaster', 'University of Reading', 'University of Sheffield', 'Universität Bern', 'Universitäts - und Landesbibliothek Bonn', 'Utrecht University']\n",
+            "\n",
+            "Handled 100 upfront transfers.\n",
+            "Discarding 90 future transfers.\n"
+          ]
+        }
+      ],
       "source": [
         "from pathlib import Path\n",
         "import pandas as pd\n",
@@ -74,7 +217,7 @@
         "\n",
         "FILE_INPUT_FOLDER = Path.home() / \"Nextcloud/TSOSI_data/doab/0_raw/\"\n",
         "FILE_OUTPUT_FOLDER = Path.home() / \"Nextcloud/TSOSI_data/doab/1_pre_processed/\"\n",
-        "INPUT_NAME = \"2025-02-11-DOAB_Library_Report.xlsx\"\n",
+        "INPUT_NAME = \"2025-05-09_DOAB_Library_Report_clean.xlsx\"\n",
         "# INPUT_NAME = \"2025-02-11-DOAB_Sponsorship_Report.xlsx\"\n",
         "OUTPUT_NAME = f\"{INPUT_NAME.split(\".\")[0]}_pre_processed.xlsx\"\n",
         "\n",
