--- a/backend/tsosi/data/preparation/doaj/run.ipynb
+++ b/backend/tsosi/data/preparation/doaj/run.ipynb
@@ -229,7 +229,151 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### 3 - Manually enrich data files\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### 4 - Prepare data files\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Manually matched DOAJ data files\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "import sys\n",
+        "import os\n",
+        "import django\n",
+        "\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+        "\n",
+        "if BASE_DIR not in sys.path:\n",
+        "    sys.path.append(BASE_DIR)\n",
+        "\n",
+        "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+        "\n",
+        "django.setup()\n",
+        "\n",
+        "from tsosi.data.utils import clean_null_values\n",
+        "from tsosi.data.pid_matching import process_enriched_data\n",
+        "from tsosi.data.preparation.cleaning_utils import clean_cell_value\n",
+        "from tsosi.models.transfer import (\n",
+        "    TRANSFER_ENTITY_TYPE_EMITTER,\n",
+        "    TRANSFER_ENTITY_TYPE_AGENT,\n",
+        ")\n",
+        "\n",
+        "transfer_sheet = \"Transfers\"\n",
+        "agent_sheet = \"Consortiums\"\n",
+        "\n",
+        "input_folder = Path.home() / \"Nextcloud/TSOSI_data/doaj/3_enriched\"\n",
+        "input_data_file = \"{file_base}_enriched_done.xlsx\"\n",
+        "\n",
+        "output_folder = Path.home() / \"Nextcloud/TSOSI_data/doaj/4_prepared\"\n",
+        "output_data_file = \"{file_base}_prepared.xlsx\"\n",
+        "\n",
+        "date_cols = []\n",
+        "\n",
+        "\n",
+        "def prepare_data(\n",
+        "    file_base: str,\n",
+        "    emitter_col: str,\n",
+        "    agent_col: str | None = None,\n",
+        "    country_col: str | None = None,\n",
+        "    date_columns=date_cols,\n",
+        "):\n",
+        "    input_file_str = input_data_file.format(file_base=file_base)\n",
+        "    data = pd.read_excel(\n",
+        "        str(input_folder / input_file_str), sheet_name=transfer_sheet\n",
+        "    )\n",
+        "\n",
+        "    prepared = process_enriched_data(\n",
+        "        data, emitter_col, TRANSFER_ENTITY_TYPE_EMITTER\n",
+        "    )\n",
+        "\n",
+        "    # Map back agent data to transfer dataframe\n",
+        "    if agent_col and country_col:\n",
+        "        agents = pd.read_excel(\n",
+        "            str(input_folder / input_file_str),\n",
+        "            sheet_name=agent_sheet,\n",
+        "        )\n",
+        "        for col in [agent_col, country_col]:\n",
+        "            prepared[col] = prepared[col].apply(clean_cell_value)\n",
+        "            agents[col] = agents[col].apply(clean_cell_value)\n",
+        "        # MAKE SURE THERE ARE NO DUPLICATES IN AGENT TO NOT CREATE TRANSFERS\n",
+        "        # WHEN LEFT JOINING\n",
+        "        agents.drop_duplicates(subset=[agent_col, country_col], inplace=True)\n",
+        "        clean_null_values(prepared)\n",
+        "        clean_null_values(agents)\n",
+        "        agents[\"_merged_from_agent\"] = True\n",
+        "        prepared = prepared.merge(\n",
+        "            agents, on=[agent_col, country_col], how=\"left\"\n",
+        "        )\n",
+        "        # Check that all transfers with agents got mapped to an agent\n",
+        "        mask = ~prepared[agent_col].isna() & (\n",
+        "            prepared[\"_merged_from_agent\"] != True\n",
+        "        )\n",
+        "        errors = prepared[mask]\n",
+        "        if not errors.empty:\n",
+        "            print(f\"!!!!!ERROR!!!! with agent handling, check return value.\")\n",
+        "            return errors\n",
+        "        prepared.drop(columns=[\"_merged_from_agent\"], inplace=True)\n",
+        "        prepared = process_enriched_data(\n",
+        "            prepared, agent_col, TRANSFER_ENTITY_TYPE_AGENT\n",
+        "        )\n",
+        "\n",
+        "    for c in date_columns:\n",
+        "        prepared[c] = prepared[c].apply(\n",
+        "            lambda x: x if pd.isna(x) or isinstance(x, str) else x.date\n",
+        "        )\n",
+        "\n",
+        "    output_file_str = output_data_file.format(file_base=file_base)\n",
+        "    prepared.sort_values(emitter_col, inplace=False).to_excel(\n",
+        "        str(output_folder / output_file_str),\n",
+        "        sheet_name=transfer_sheet,\n",
+        "        index=False,\n",
+        "    )\n",
+        "    print(f\"Exported to {output_file_str}\")\n",
+        "\n",
+        "\n",
+        "params = [\n",
+        "    (\"2025-01-07-DOAJ_Publisher_Report_2021\", \"Company\"),\n",
+        "    (\"2025-01-07-DOAJ_Publisher_Report_2022\", \"Company\"),\n",
+        "    (\"2025-01-07-DOAJ_Publisher_Report_2023\", \"Company\"),\n",
+        "    (\"2025-01-07-DOAJ_Publisher_Report_2024\", \"Company\"),\n",
+        "    (\"2024-09-20-DOAJ_Library_Report_2021\", \"Institution name\"),\n",
+        "    (\"2024-09-20-DOAJ_Library_Report_2022\", \"Institution name\"),\n",
+        "    (\n",
+        "        \"2024-09-20-DOAJ_Library_Report_2023\",\n",
+        "        \"Institution name\",\n",
+        "        \"agent/consortium\",\n",
+        "        \"country\",\n",
+        "    ),\n",
+        "    (\n",
+        "        \"2025-01-15-DOAJ_Library_Report_2024\",\n",
+        "        \"Company\",\n",
+        "        \"Agent\",\n",
+        "        \"Country\",\n",
+        "        [\"Invoice date\", \"Support end date\", \"Paid up until\"],\n",
+        "    ),\n",
+        "]\n",
+        "\n",
+        "\n",
+        "for param_tuple in params:\n",
+        "    prepare_data(*param_tuple)"
       ]
     },
     {
