--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -97,12 +97,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mini-check of paid status & payment date coherency\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
     "file = (\n",
     "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/scipost/0_raw/2025-05-06_scipost_raw.json\"\n",
+    "    / f\"Nextcloud/TSOSI_data/scipost/0_raw/{today_str}_scipost_raw.json\"\n",
     ")\n",
     "df = pd.read_json(str(file))\n",
     "mask = (~df[\"payment_date\"].isna()) & (df[\"status\"] != \"paid\")\n",
@@ -142,7 +143,7 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
-    "date_str = \"2025-05-06\"\n",
+    "date_str = \"2025-05-28\"\n",
     "raw_file = f\"{date_str}_scipost_raw.json\"\n",
     "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
     "raw_path = str(raw_folder / raw_file)\n",
@@ -262,7 +263,7 @@
     "\n",
     "from tsosi.data.preparation.scipost.default import get_config\n",
     "\n",
-    "date_data = date(2025, 5, 6)\n",
+    "date_data = date(2025, 5, 28)\n",
     "date_str = date_data.strftime(\"%Y-%m-%d\")\n",
     "file_path = (\n",
     "    Path.home()\n",
