Final additions to static pages

--- a/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
@@ -155,6 +155,13 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -169,30 +176,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Discarded 22 rows without amount out of 1183 rows.\n",
-            "The following entities have 'One year commitment' with commitment period > 1 year\n",
-            "['American University', 'Hochschule für angewandte Wissenschaft und Kunst, Fachhochschule Hildesheim/Holzminden/Göttingen-Bib', 'Hochschule Osnabrück / Bibliothek', 'Library of the Deutsches Museum']\n",
-            "\n",
-            "WARNING - The following Entities have Annual transfers spanning more than 1 year and inconsistent commitment period:\n",
-            "['Umeå University', 'University of Massachusetts, Amherst']\n",
-            "\n",
-            "Splitted 77 annual transfers.\n",
-            "ERROR - There are some inconsistent data within the Upfront transfers\n",
-            "Check the following entities:\n",
-            "['CON: Det Kgl. Bibliothek', 'SUNY System', 'TU Darmstadt, Universitäts - und Landesbibliothek', 'University of Birmingham', 'University of California, Riverside', 'University of Guelph', 'University of Lancaster', 'University of Reading', 'University of Sheffield', 'Universität Bern', 'Universitäts - und Landesbibliothek Bonn', 'Utrecht University']\n",
-            "\n",
-            "Handled 100 upfront transfers.\n",
-            "Discarding 90 future transfers.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from pathlib import Path\n",
         "import pandas as pd\n",
@@ -217,8 +203,9 @@
         "\n",
         "FILE_INPUT_FOLDER = Path.home() / \"Nextcloud/TSOSI_data/doab/0_raw/\"\n",
         "FILE_OUTPUT_FOLDER = Path.home() / \"Nextcloud/TSOSI_data/doab/1_pre_processed/\"\n",
-        "INPUT_NAME = \"2025-05-09_DOAB_Library_Report_clean.xlsx\"\n",
+        "INPUT_NAME = \"2025-02-11-DOAB_Library_Report.xlsx\"\n",
         "# INPUT_NAME = \"2025-02-11-DOAB_Sponsorship_Report.xlsx\"\n",
+        "# INPUT_NAME = \"2025-02-11_DOAB_Library_support_no_amount_reviewed.xlsx\"\n",
         "OUTPUT_NAME = f\"{INPUT_NAME.split(\".\")[0]}_pre_processed.xlsx\"\n",
         "\n",
         "AMOUNT_COLS_REGEX = [r\"Annual amount \\(([A-Z]{3})\\)\", r\"Amount \\(([A-Z]{3})\\)\"]\n",
@@ -455,12 +442,35 @@
         "    return upfronts_clean\n",
         "\n",
         "\n",
-        "def organize_transfers(df: pd.DataFrame):\n",
+        "def handle_upfront_easy(transfers: pd.DataFrame) -> pd.DataFrame:\n",
+        "    \"\"\"\n",
+        "    Process upfront transfers when each row already corresponds to an individual\n",
+        "    transfer.\n",
+        "    We only need to compute the full amount from the annual amount.\n",
+        "    \"\"\"\n",
+        "    upfronts = transfers[\n",
+        "        transfers[\"Invoice preference\"].str.strip().str.lower() == \"upfront\"\n",
+        "    ].copy()\n",
+        "    if upfronts.empty:\n",
+        "        return pd.DataFrame()\n",
+        "    for currency, col in amount_columns.items():\n",
+        "        upfronts[f\"amount_{currency}\"] = (\n",
+        "            upfronts[col] * upfronts[\"Commitment period (years)\"]\n",
+        "        )\n",
+        "    upfronts[\"date_start\"] = upfronts[\"_date_start\"]\n",
+        "    upfronts[\"date_end\"] = upfronts[\"_date_end\"]\n",
+        "\n",
+        "    return upfronts[get_final_cols(upfronts)].copy()\n",
+        "\n",
+        "\n",
+        "def organize_transfers(\n",
+        "    df: pd.DataFrame, easy_upfront=True, date_format=\"%d/%m/%Y\"\n",
+        "):\n",
         "    df[\"_date_start\"] = pd.to_datetime(\n",
-        "        df[start_date_col], format=\"%d/%m/%Y\", errors=\"raise\"\n",
+        "        df[start_date_col], format=date_format, errors=\"raise\"\n",
         "    )\n",
         "    df[\"_date_end\"] = pd.to_datetime(\n",
-        "        df[end_date_col], format=\"%d/%m/%Y\", errors=\"raise\"\n",
+        "        df[end_date_col], format=date_format, errors=\"raise\"\n",
         "    )\n",
         "    df[\"_spanned_time\"] = df[\"_date_end\"] - df[\"_date_start\"]\n",
         "\n",
@@ -479,13 +489,16 @@
         "        )\n",
         "\n",
         "    # Split data according to the Invoice preference\n",
-        "    res = pd.concat(\n",
-        "        [\n",
-        "            handle_one_year_transfers(df),\n",
-        "            handle_annual_transfers(df),\n",
-        "            handle_upfront_transfers(df),\n",
-        "        ]\n",
-        "    )\n",
+        "    to_concat = [\n",
+        "        handle_one_year_transfers(df),\n",
+        "        handle_annual_transfers(df),\n",
+        "    ]\n",
+        "    if easy_upfront:\n",
+        "        to_concat.append(handle_upfront_easy(df))\n",
+        "    else:\n",
+        "        to_concat.append(handle_upfront_transfers(df))\n",
+        "\n",
+        "    res = pd.concat(to_concat)\n",
         "\n",
         "    # Map amount columns to amount & currency\n",
         "    res[\"amount\"] = None\n",
@@ -511,7 +524,7 @@
         "    return df[~mask].copy()\n",
         "\n",
         "\n",
-        "def pre_process(export=False):\n",
+        "def pre_process(easy_upfront=False, export=False, date_format=\"%d/%m/%Y\"):\n",
         "    df = pd.read_excel(f\"{FILE_INPUT_FOLDER}/{INPUT_NAME}\")\n",
         "\n",
         "    # Find correct columns\n",
@@ -537,7 +550,9 @@
         "        )\n",
         "\n",
         "    df_filtered = select_transfers(df)\n",
-        "    df_clean = organize_transfers(df_filtered)\n",
+        "    df_clean = organize_transfers(\n",
+        "        df_filtered, easy_upfront=easy_upfront, date_format=date_format\n",
+        "    )\n",
         "    df_final = discard_future_transfers(df_clean)\n",
         "    df_final[\"date_start\"] = df_final[\"date_start\"].dt.date\n",
         "    df_final[\"date_end\"] = df_final[\"date_end\"].dt.date\n",
@@ -550,7 +565,8 @@
         "    return df_final\n",
         "\n",
         "\n",
-        "res = pre_process(export=False)"
+        "# res = pre_process(easy_upfront=True, export=True, date_format=\"%m/%d/%Y\")\n",
+        "res = pre_process(easy_upfront=False, export=True, date_format=\"%d/%m/%Y\")"
       ]
     },
     {
@@ -559,7 +575,49 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "res.sort_values(\"amount\", ascending=False)"
+        "res[res[\"Company\"] == \"University of Massachusetts, Amherst\"]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Merge multiple data files into one\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "\n",
+        "fodler = Path.home() / \"Nextcloud/TSOSI_data/doab/1_pre_processed\"\n",
+        "filter_date = pd.to_datetime(f\"2020-01-01\", format=\"%Y-%m-%d\")\n",
+        "\n",
+        "files = [\n",
+        "    \"2025-02-11-DOAB_Library_Report_pre_processed.xlsx\",\n",
+        "    \"2025-02-11_DOAB_Library_support_no_amount_reviewed_pre_processed.xlsx\",\n",
+        "]\n",
+        "output_file = (\n",
+        "    \"2025-02-11_DOAB_Library_Report_combined_starting_2020_pre_processed.xlsx\"\n",
+        ")\n",
+        "\n",
+        "df = None\n",
+        "\n",
+        "for f in files:\n",
+        "    add = pd.read_excel(str(fodler / f))\n",
+        "    df = add if df is None else pd.concat([df, add], axis=0)\n",
+        "\n",
+        "df = df[df[\"date_start\"] > filter_date]\n",
+        "\n",
+        "date_cols = [\"date_start\", \"date_end\"]\n",
+        "for c in date_cols:\n",
+        "    df[c] = df[c].dt.date\n",
+        "\n",
+        "df.to_excel(str(fodler / output_file), sheet_name=\"Transfers\", index=False)"
       ]
     },
     {
@@ -640,6 +698,108 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### 3 - Use existing enriched file\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import sys\n",
+        "import os\n",
+        "import django\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+        "\n",
+        "if BASE_DIR not in sys.path:\n",
+        "    sys.path.append(BASE_DIR)\n",
+        "\n",
+        "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+        "\n",
+        "django.setup()\n",
+        "\n",
+        "from tsosi.data.preparation.cleaning_utils import clean_cell_value\n",
+        "\n",
+        "to_enrich_file = (\n",
+        "    Path.home()\n",
+        "    / \"Nextcloud/TSOSI_data/doab/1_pre_processed/2025-02-11_DOAB_Library_Report_combined_FULL_pre_processed.xlsx\"\n",
+        ")\n",
+        "enriched_file = (\n",
+        "    Path.home()\n",
+        "    / \"Nextcloud/TSOSI_data/doab/3_enriched/2025-02-11-DOAB_Library_Report_enriched_mapping.xlsx\"\n",
+        ")\n",
+        "\n",
+        "to_enrich = pd.read_excel(str(to_enrich_file))\n",
+        "enriched = pd.read_excel(str(enriched_file), sheet_name=\"Transfers\")\n",
+        "consortiums = pd.read_excel(str(enriched_file), sheet_name=\"Consortiums\")\n",
+        "\n",
+        "to_clean = [\"Company\", \"Country\"]\n",
+        "for c in to_clean:\n",
+        "    to_enrich[c] = to_enrich[c].apply(clean_cell_value)\n",
+        "    enriched[c] = enriched[c].apply(clean_cell_value)\n",
+        "\n",
+        "enrichment_columns = [c for c in enriched.columns if c.startswith(\"_\")]\n",
+        "data = (\n",
+        "    enriched.groupby([\"Company\", \"Country\"], dropna=False)[enrichment_columns]\n",
+        "    .first()\n",
+        "    .reset_index()\n",
+        ")\n",
+        "\n",
+        "organized = to_enrich.merge(data, how=\"left\", on=[\"Company\", \"Country\"])\n",
+        "sorted_cols = []\n",
+        "for c in organized.columns:\n",
+        "    if c in enrichment_columns:\n",
+        "        continue\n",
+        "    sorted_cols.append(c)\n",
+        "    if c == \"Company\":\n",
+        "        sorted_cols += enrichment_columns\n",
+        "\n",
+        "organized = organized[sorted_cols].copy()\n",
+        "organized.to_excel()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "not_matched = (\n",
+        "    organized[organized[\"_processed\"] != True][\"Company\"]\n",
+        "    .drop_duplicates()\n",
+        "    .to_list()\n",
+        ")\n",
+        "not_matched\n",
+        "# organized[organized[\"Company\"] == \"Rutgers University\"]\n",
+        "# to_enrich[to_enrich[\"Company\"] == \"Rutgers University\"]\n",
+        "# data[data[\"Company\"] == \"Rutgers University\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "output_file = (\n",
+        "    Path.home()\n",
+        "    / \"Nextcloud/TSOSI_data/doab/3_enriched/2025-02-11-DOAB_Library_Report_enriched.xlsx\"\n",
+        ")\n",
+        "writer = pd.ExcelWriter(str(output_file), engine=\"xlsxwriter\")\n",
+        "organized.to_excel(writer, sheet_name=\"Transfers\", index=False)\n",
+        "consortiums.to_excel(writer, sheet_name=\"Consortiums\", index=False)\n",
+        "writer.close()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### 4 - Prepare enriched data\n"
       ]
     },
@@ -678,6 +838,7 @@
         "INPUT_NAME = f\"3_enriched/{file_base_name}_enriched.xlsx\"\n",
         "sheet_transfers = \"Transfers\"\n",
         "name_col = \"Company\"\n",
+        "agent_to_drop = [\"SCOSS\"]\n",
         "\n",
         "\n",
         "def process(process_agents=False):\n",
@@ -695,6 +856,9 @@
         "        for col in [agent_col, country_col]:\n",
         "            res[col] = res[col].apply(clean_cell_value)\n",
         "            agents[col] = agents[col].apply(clean_cell_value)\n",
+        "        # Clean wrong agents\n",
+        "        mask = res[agent_col].isin(agent_to_drop)\n",
+        "        res.loc[mask, agent_col] = None\n",
         "        # MAKE SURE THERE ARE NO DUPLICATES IN AGENT TO NOT CREATE TRANSFERS\n",
         "        # WHEN LEFT JOINING\n",
         "        agents.drop_duplicates(subset=[agent_col, country_col], inplace=True)\n",
@@ -702,7 +866,7 @@
         "        clean_null_values(res)\n",
         "        agents[\"_merged_from_agent\"] = True\n",
         "        res = res.merge(agents, on=[agent_col, country_col], how=\"left\")\n",
-        "        # Check that all agents\n",
+        "        # Check that all agents got mapped\n",
         "        mask = ~res[agent_col].isna() & (res[\"_merged_from_agent\"] != True)\n",
         "        errors = res[mask]\n",
         "        if not errors.empty:\n",
@@ -733,6 +897,38 @@
         ")\n",
         "\n",
         "res.to_excel(str(prepared_file_path), sheet_name=\"Transfers\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4.bis - Filter date\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "\n",
+        "folder = Path.home() / \"Nextcloud/TSOSI_data/doab/4_prepared\"\n",
+        "filter_date = pd.to_datetime(f\"2020-12-31\", format=\"%Y-%m-%d\")\n",
+        "file = \"2025-02-11-DOAB_Library_Report_prepared.xlsx\"\n",
+        "output_file = \"2025-02-11-DOAB_Library_Report_prepared_starting_2021.xlsx\"\n",
+        "\n",
+        "df = pd.read_excel(str(folder / file))\n",
+        "\n",
+        "df = df[df[\"date_start\"] > filter_date]\n",
+        "\n",
+        "date_cols = [\"date_start\", \"date_end\"]\n",
+        "for c in date_cols:\n",
+        "    df[c] = df[c].dt.date\n",
+        "\n",
+        "df.to_excel(str(folder / output_file), sheet_name=\"Transfers\", index=False)"
       ]
     },
     {
@@ -771,7 +967,7 @@
         "# Libraries\n",
         "file_path = (\n",
         "    Path.home()\n",
-        "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Library_Report_prepared.xlsx\"\n",
+        "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Library_Report_prepared_starting_2021.xlsx\"\n",
         ")\n",
         "sheet_name = \"Transfers\"\n",
         "config = config_libraries(str(file_path), sheet_name, date_data)\n",
@@ -835,76 +1031,6 @@
         "    / \"2025-02-11-DOAB_Library_Report_matched_grouped.xlsx\",\n",
         "    index=False,\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Use already enriched data\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "from pathlib import Path\n",
-        "\n",
-        "to_enrich_file = Path.home() / \"Nextcloud/TSOSI_data/doab/temp_correction.xlsx\"\n",
-        "enriched_file = (\n",
-        "    Path.home()\n",
-        "    / \"Nextcloud/TSOSI_data/doab/3_enriched/2025-02-11-DOAB_Library_Report_enriched_backup.xlsx\"\n",
-        ")\n",
-        "\n",
-        "to_enrich = pd.read_excel(str(to_enrich_file))\n",
-        "enriched = pd.read_excel(str(enriched_file), sheet_name=\"Transfers\")\n",
-        "consortiums = pd.read_excel(str(enriched_file), sheet_name=\"Consortiums\")\n",
-        "\n",
-        "enrichment_columns = [c for c in enriched.columns if c.startswith(\"_\")]\n",
-        "data = (\n",
-        "    enriched.groupby([\"Company\", \"Country\"], dropna=False)[enrichment_columns]\n",
-        "    .first()\n",
-        "    .reset_index()\n",
-        ")\n",
-        "\n",
-        "organized = to_enrich.merge(data, how=\"left\", on=[\"Company\", \"Country\"])\n",
-        "sorted_cols = []\n",
-        "for c in organized.columns:\n",
-        "    if c in enrichment_columns:\n",
-        "        continue\n",
-        "    sorted_cols.append(c)\n",
-        "    if c == \"Company\":\n",
-        "        sorted_cols += enrichment_columns\n",
-        "\n",
-        "organized = organized[sorted_cols].copy()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "output_file = (\n",
-        "    Path.home()\n",
-        "    / \"Nextcloud/TSOSI_data/doab/3_enriched/2025-02-11-DOAB_Library_Report_enriched.xlsx\"\n",
-        ")\n",
-        "writer = pd.ExcelWriter(str(output_file), engine=\"xlsxwriter\")\n",
-        "organized.to_excel(writer, sheet_name=\"Transfers\", index=False)\n",
-        "consortiums.to_excel(writer, sheet_name=\"Consortiums\", index=False)\n",
-        "writer.close()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "consortiums"
       ]
     },
     {
