--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dev - Debug token request\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,7 +29,10 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from get_data import get_scipost_raw_data, SCIPOST_TOKEN_URL\n",
+    "from tsosi.data.preparation.scipost.get_data import (\n",
+    "    get_scipost_raw_data,\n",
+    "    SCIPOST_TOKEN_URL,\n",
+    ")\n",
     "from tsosi.app_settings import app_settings\n",
     "from datetime import date\n",
     "from pathlib import Path\n",
@@ -39,14 +49,48 @@
     "print(\"Collecting OAuth2 token\")\n",
     "auth_data = app_settings.SCIPOST_AUTH\n",
     "\n",
+    "if auth_data is None:\n",
+    "    raise Exception(\"Missing TSOSI_SCIPOST_AUTH setting\")\n",
+    "\n",
     "payload = {\n",
     "    \"grant_type\": \"password\",\n",
-    "    \"username\": auth_data[\"username\"],\n",
+    "    \"username\": \"TSOSI\",\n",
     "    \"password\": auth_data[\"password\"],\n",
     "    \"scope\": \"read\",\n",
     "}\n",
     "auth = (auth_data[\"client_id\"], auth_data[\"client_secret\"])\n",
-    "token_data: dict = requests.post(SCIPOST_TOKEN_URL, payload, auth=auth)"
+    "# print(auth)\n",
+    "# print(payload)\n",
+    "token_data: dict = requests.post(SCIPOST_TOKEN_URL, payload, auth=auth).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import urlencode, quote_plus\n",
+    "\n",
+    "qs = \"&\".join([f\"{k}={v}\" for k, v in payload.items()])\n",
+    "qs = urlencode(payload)\n",
+    "\n",
+    "authentication = \":\".join(auth)\n",
+    "\n",
+    "print(\n",
+    "    f'curl -X POST -d \"{qs}\" -u \"{authentication}\" https://scipost.org/o/token/'\n",
+    ")\n",
+    "# token_data\n",
+    "quote_plus(\"contact@tsosi.org\")"
    ]
   },
   {
@@ -69,52 +113,27 @@
     "from datetime import date\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent.parent\n",
     "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
+    "if str(BASE_DIR) not in sys.path:\n",
+    "    sys.path.append(str(BASE_DIR))\n",
     "\n",
     "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
     "\n",
     "django.setup()\n",
     "\n",
-    "from get_data import get_scipost_raw_data\n",
-    "from datetime import date\n",
+    "from tsosi.data.preparation.scipost.get_data import get_scipost_raw_data\n",
     "from pathlib import Path\n",
     "\n",
-    "today_str = date.today().strftime(\"%Y-%m-%d\")\n",
-    "raw_data_file = f\"{today_str}_scipost_raw.json\"\n",
-    "\n",
-    "raw_data_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
-    "\n",
-    "raw_path = str(raw_data_folder / raw_data_file)\n",
-    "get_scipost_raw_data(dest_file=raw_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mini-check of paid status & payment date coherency\n",
-    "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "\n",
-    "file = (\n",
-    "    Path.home()\n",
-    "    / f\"Nextcloud/TSOSI_data/scipost/0_raw/{today_str}_scipost_raw.json\"\n",
-    ")\n",
-    "df = pd.read_json(str(file))\n",
-    "mask = (~df[\"payment_date\"].isna()) & (df[\"status\"] != \"paid\")\n",
-    "df[mask]"
+    "raw_data_folder = BASE_DIR / \"_no_git/fixtures/scipost/0_raw\"\n",
+    "results = get_scipost_raw_data(dest_folder=raw_data_folder)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1 - Pre-process collected data\n"
+    "### 1 - Process collected data\n"
    ]
   },
   {
@@ -127,48 +146,48 @@
     "import sys\n",
     "import os\n",
     "import django\n",
-    "from datetime import date\n",
+    "import pandas as pd\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent.parent\n",
     "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
+    "if str(BASE_DIR) not in sys.path:\n",
+    "    sys.path.append(str(BASE_DIR))\n",
     "\n",
     "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
     "\n",
     "django.setup()\n",
     "\n",
-    "from get_data import pre_process_data\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
+    "date_str = \"2025-06-24\"\n",
+    "raw_data_folder = BASE_DIR / \"_no_git/fixtures/scipost/0_raw\"\n",
     "\n",
-    "date_str = \"2025-05-28\"\n",
-    "raw_file = f\"{date_str}_scipost_raw.json\"\n",
-    "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
-    "raw_path = str(raw_folder / raw_file)\n",
+    "subsidies = pd.read_json(\n",
+    "    str(raw_data_folder / f\"{date_str}_scipost_subsidies.json\")\n",
+    ")\n",
+    "payments = pd.read_json(\n",
+    "    str(raw_data_folder / f\"{date_str}_scipost_payments.json\")\n",
+    ")\n",
+    "collectives = pd.read_json(\n",
+    "    str(raw_data_folder / f\"{date_str}_scipost_collectives.json\")\n",
+    ")\n",
     "\n",
-    "processed_file = f\"{date_str}_scipost_pre_processed.json\"\n",
-    "processed_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/1_pre_processed\"\n",
-    "processed_path = str(processed_folder / processed_file)\n",
     "\n",
-    "df = pd.read_json(raw_path, orient=\"records\")\n",
+    "from tsosi.data.preparation.scipost.get_data import (\n",
+    "    prepare_data,\n",
+    ")\n",
     "\n",
-    "data = pre_process_data(df)\n",
-    "data.to_json(processed_path, orient=\"records\", indent=2, index=False)\n",
+    "res = prepare_data(payments, subsidies, collectives)\n",
     "\n",
-    "processed_file = processed_file.split(\".\")[0] + \".xlsx\"\n",
+    "prepared_data_folder = BASE_DIR / \"_no_git/fixtures/scipost/4_processed\"\n",
+    "dest_file = str(prepared_data_folder / f\"{date_str}_scipost_processed.json\")\n",
+    "with open(dest_file, \"w\") as f:\n",
+    "    res.to_json(\n",
+    "        f,\n",
+    "        orient=\"records\",\n",
+    "        indent=2,\n",
+    "    )\n",
     "\n",
-    "data.sort_values([\"emitter_ror_id\", \"emitter\"]).to_excel(\n",
-    "    str(processed_folder / processed_file), sheet_name=\"Transfers\", index=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data check\n"
+    "print(f\"Prepared data dumped in {dest_file}\")"
    ]
   },
   {
@@ -177,59 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "\n",
-    "# Dates\n",
-    "date_cols = [\"date_scheduled\", \"invoice_date\", \"payment_date\"]\n",
-    "for c in date_cols:\n",
-    "    df[c] = pd.to_datetime(df[c])\n",
-    "\n",
-    "subsidies = pd.json_normalize(df[\"subsidy\"]).add_prefix(\"subsidy_\")\n",
-    "df = pd.concat([df.drop(columns=[\"subsidy\"]), subsidies], axis=1)\n",
-    "\n",
-    "# Payments check\n",
-    "check = df.groupby(\"subsidy_url\").agg(\n",
-    "    {\n",
-    "        \"amount\": [\"sum\", \"count\"],\n",
-    "        \"subsidy_amount\": \"first\",\n",
-    "        \"subsidy_amount_publicly_shown\": \"first\",\n",
-    "        \"subsidy_date_from\": \"first\",\n",
-    "        \"subsidy_date_until\": \"first\",\n",
-    "    }\n",
-    ")\n",
-    "check[\"diff\"] = ~check[\"amount\", \"sum\"].eq(check[\"subsidy_amount\", \"first\"])\n",
-    "check[check[\"diff\"] & check[\"subsidy_amount_publicly_shown\", \"first\"]]\n",
-    "\n",
-    "# Payment status description\n",
-    "df[\n",
-    "    (df[\"status\"] == \"scheduled\")\n",
-    "    & (df[\"date_scheduled\"] < pd.to_datetime(date(2025, 3, 1)))\n",
-    "]\n",
-    "\n",
-    "# Invoiced payment check\n",
-    "invoice_date_threshold = pd.to_datetime(datetime.date.today()) - pd.Timedelta(\n",
-    "    days=180\n",
-    ")\n",
-    "df[(df[\"status\"] == \"invoiced\") & (df[\"invoice_date\"] < invoice_date_threshold)]\n",
-    "\n",
-    "\n",
-    "# Missing date value\n",
-    "df[\n",
-    "    (\n",
-    "        df[\"invoice_date\"].isna()\n",
-    "        & df[\"payment_date\"].isna()\n",
-    "        & df[\"status\"].isin([\"paid\", \"invoiced\"])\n",
-    "    )\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3 - Enrich data\n",
-    "\n",
-    "Manually enrich the SciPost data with the wikidata ID for the organizations without ROR ID.\n"
+    "res"
    ]
   },
   {
@@ -252,10 +219,10 @@
     "from datetime import date\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent.parent\n",
     "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
+    "if str(BASE_DIR) not in sys.path:\n",
+    "    sys.path.append(str(BASE_DIR))\n",
     "\n",
     "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
     "\n",
@@ -263,20 +230,20 @@
     "\n",
     "from tsosi.data.preparation.scipost.default import get_config\n",
     "\n",
-    "date_data = date(2025, 5, 28)\n",
+    "date_data = date(2025, 6, 24)\n",
     "date_str = date_data.strftime(\"%Y-%m-%d\")\n",
     "file_path = (\n",
-    "    Path.home()\n",
-    "    / f\"Nextcloud/TSOSI_data/scipost/4_processed/{date_str}_scipost_processed.xlsx\"\n",
+    "    BASE_DIR\n",
+    "    / f\"_no_git/fixtures/scipost/4_processed/{date_str}_scipost_processed.json\"\n",
     ")\n",
-    "config = get_config(str(file_path), \"Transfers\", date_data)\n",
+    "config = get_config(str(file_path), date_data)\n",
     "config.generate_data_file()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "tsosi-backend-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
