--- a/backend/tsosi/data/preparation/doab/prepare_test_data.ipynb
+++ b/backend/tsosi/data/preparation/doab/prepare_test_data.ipynb
@@ -5,7 +5,7 @@
    "id": "d910cf70",
    "metadata": {},
    "source": [
-    "### Generate DOAJ fixture file\n"
+    "### Generate DOAB fixture file\n"
    ]
   },
   {
@@ -31,12 +31,14 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.preparation.doaj.libraries_2024_now import get_fixture_config\n",
+    "from tsosi.data.preparation.doab.libraries import get_config\n",
     "from tsosi.app_settings import app_settings\n",
     "\n",
-    "file_path = app_settings.TSOSI_APP_DATA_DIR / \"fixtures/doaj_example.json\"\n",
+    "file_path = (\n",
+    "    app_settings.TSOSI_APP_DATA_DIR / \"fixtures/DOAB_Library_fixture.xlsx\"\n",
+    ")\n",
     "date_data = date.today()\n",
-    "config = get_fixture_config(2024, str(file_path), date_data)\n",
+    "config = get_config(str(file_path), \"Transfers\", date_data)\n",
     "output_folder = app_settings.TSOSI_APP_DATA_DIR / \"fixtures/prepared_files\"\n",
     "config.generate_data_file(output_folder)"
    ]
@@ -44,7 +46,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "tsosi-backend-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
