Back-end documentation (#100)
* Backend documentation

* Complete documentation on data preparation

* New fixtures for all infra + test the test data ingestion

--- a/backend/tsosi/data/preparation/doab/prepare_test_data.ipynb
+++ b/backend/tsosi/data/preparation/doab/prepare_test_data.ipynb
@@ -1,22 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d910cf70",
+   "metadata": {},
+   "source": [
+    "### Generate DOAB fixture file\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5bee552",
+   "id": "9ce046cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import os\n",
     "import sys\n",
+    "import os\n",
     "import django\n",
-    "from IPython.display import display\n",
-    "from asgiref.sync import sync_to_async\n",
+    "from datetime import date\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent)\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
     "\n",
     "if BASE_DIR not in sys.path:\n",
     "    sys.path.append(BASE_DIR)\n",
@@ -25,15 +31,16 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.enrichment.database_related import update_entity_names\n",
+    "from tsosi.data.preparation.doab.libraries import get_config\n",
+    "from tsosi.app_settings import app_settings\n",
     "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    return update_entity_names()\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
+    "file_path = (\n",
+    "    app_settings.TSOSI_APP_DATA_DIR / \"fixtures/DOAB_Library_fixture.xlsx\"\n",
+    ")\n",
+    "date_data = date.today()\n",
+    "config = get_config(str(file_path), \"Transfers\", date_data)\n",
+    "output_folder = app_settings.TSOSI_APP_DATA_DIR / \"fixtures/prepared_files\"\n",
+    "config.generate_data_file(output_folder)"
    ]
   }
  ],
