Create dedicated RawDataConfig and celery tasks to refresh scipost data every week

--- a/backend/tsosi/data/preparation/scipost/prepare_test_data.ipynb
+++ b/backend/tsosi/data/preparation/scipost/prepare_test_data.ipynb
@@ -31,12 +31,12 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.preparation.scipost.default import get_config\n",
+    "from tsosi.data.preparation.scipost.configs import get_file_config\n",
     "from tsosi.app_settings import app_settings\n",
     "\n",
     "file_path = app_settings.TSOSI_APP_DATA_DIR / \"fixtures/scipost_fixture.json\"\n",
     "date_data = date.today()\n",
-    "config = get_config(str(file_path), date_data)\n",
+    "config = get_file_config(str(file_path), date_data)\n",
     "output_folder = app_settings.TSOSI_APP_DATA_DIR / \"fixtures/prepared_files\"\n",
     "config.generate_data_file(output_folder)"
    ]
