--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.preparation.scipost.get_data import (\n",
+    "from tsosi.data.preparation.scipost.data import (\n",
     "    get_scipost_raw_data,\n",
     "    SCIPOST_TOKEN_URL,\n",
     ")\n",
@@ -110,7 +110,6 @@
     "import sys\n",
     "import os\n",
     "import django\n",
-    "from datetime import date\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
     "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent.parent\n",
@@ -122,7 +121,7 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.preparation.scipost.get_data import get_scipost_raw_data\n",
+    "from tsosi.data.preparation.scipost.data import get_scipost_raw_data\n",
     "from pathlib import Path\n",
     "\n",
     "raw_data_folder = BASE_DIR / \"_no_git/fixtures/scipost/0_raw\"\n",
@@ -172,7 +171,7 @@
     ")\n",
     "\n",
     "\n",
-    "from tsosi.data.preparation.scipost.get_data import (\n",
+    "from tsosi.data.preparation.scipost.data import (\n",
     "    prepare_data,\n",
     ")\n",
     "\n",
@@ -228,7 +227,7 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.preparation.scipost.default import get_config\n",
+    "from backend.tsosi.data.preparation.scipost.configs import get_file_config\n",
     "\n",
     "date_data = date(2025, 6, 24)\n",
     "date_str = date_data.strftime(\"%Y-%m-%d\")\n",
@@ -236,7 +235,7 @@
     "    BASE_DIR\n",
     "    / f\"_no_git/fixtures/scipost/4_processed/{date_str}_scipost_processed.json\"\n",
     ")\n",
-    "config = get_config(str(file_path), date_data)\n",
+    "config = get_file_config(str(file_path), date_data)\n",
     "config.generate_data_file()"
    ]
   }
